@@ -394,8 +394,8 @@
         <version>3.14.1</version>
         <configuration>
           <compilerArgs>
-            <arg>-Xlint:deprecation</arg>
-            <arg>-Xlint:unchecked</arg>
+            <arg>-Xlint:all,-processing</arg>
+            <arg>-proc:full</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
